// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeBar when it is at the end it renders correctly 1`] = `
<div
  className="css-yvobmt"
>
  <input
    className="css-jlbw85"
    max={10}
    onChange={[Function]}
    size="0.2em"
    step="any"
    type="range"
    value={10}
  />
  <div
    className="css-165iffl"
  />
</div>
`;

exports[`RangeBar whith all props it renders correctly 1`] = `
<div
  className="css-flc5ir"
>
  <input
    className="css-9aew2r"
    max={10}
    onChange={[Function]}
    size="3em"
    step="any"
    type="range"
    value={10}
  />
  <div
    className="css-50mjea"
  />
</div>
`;

exports[`RangeBar without currentValue and maxValue it renders correctly 1`] = `
<div
  className="css-yvobmt"
>
  <input
    className="css-jlbw85"
    max={10}
    onChange={[Function]}
    size="0.2em"
    step="any"
    type="range"
    value={9}
  />
  <div
    className="css-1s0fwli"
  />
</div>
`;

exports[`RangeBar without props it renders correctly 1`] = `
<div
  className="css-yvobmt"
>
  <input
    className="css-jlbw85"
    max={1}
    onChange={[Function]}
    size="0.2em"
    step="any"
    type="range"
    value={0}
  />
  <div
    className="css-1wlszkb"
  />
</div>
`;
